--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+datalinks/refs/bwaidx/bwaidx.bwt
 week3/prob1/trimmomatic_out/ALD06_R1_paired.fq
 week3/prob1/trimmomatic_out/ALD06_R1_unpaired.fq
 week3/prob1/trimmomatic_out/ALD06_R2_paired.fq
