Started week 5 hw

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,15 @@ week3/prob5/RNAbam/21012P0.sort.bam
 week3/prob5/RNAbam/21002E0.sort.bam
 week3/prob5/RNAbam/21001B0.sort.bam
 week3/prob5/RNAbam/21002P0.sort.bam
+week5/bamout/ADL06.RG.bam
+week5/bamout/ADL09.RG.bam
+week5/bamout/ADL10.RG.bam
+week5/bamout/ADL14.RG.bam
+week5/bamout/ADL09.dedup.bam
+week5/bamout/ADL10.dedup.bam
+week5/bamout/ADL06.dedup.bam
+week5/bamout/ADL14.dedup.bam
+week5/bamout/ADL10.mrg.bam
+week5/bamout/ADL09.mrg.bam
+week5/bamout/ADL06.mrg.bam
+week5/bamout/ADL14.mrg.bam
